fix wrap/unwrap and symbiosis testnet tx status api

--- a/src/app/features/swaps/features/swap-form/components/form-header/form-header.component.scss
+++ b/src/app/features/swaps/features/swap-form/components/form-header/form-header.component.scss
@@ -29,6 +29,10 @@
       margin-left: -15px;
     }
 
+    &_non-background {
+      background: transparent;
+    }
+
     img {
       border-radius: 50%;
     }
